services/ai/manifests/03-ollama.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app: "ollama"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 11434
      protocol: TCP
      targetPort: 11434
  selector:
    app: ollama
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  labels:
    app: "ollama"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: "ollama"
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      #   fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: ollama
          image: ollama/ollama
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 11434
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: data
              mountPath: /root/.ollama
              readOnly: false
          # livenessProbe:
          #   httpGet:
          #     port: 9696
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 9696
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 9696
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ollama-data
