services/ai/manifests/04-open-webui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    app: "open-webui"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: open-webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  labels:
    app: "open-webui"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: "open-webui"
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 8080
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: data
              mountPath: /app/backend/data
              readOnly: false
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui-data
