services/ai/manifests/02-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ai-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - webui.ai.cluster.lab
      secretName: ai-tls-secret
  rules:
  - host: webui.ai.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "open-webui"
              port:
                number: 8080
